change packsge config

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "express_handlebar",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "author": "",
   "license": "ISC",
